Deploy/webapp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-nodeport
spec:
  type: NodePort
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 8888
    targetPort: 80
    nodePort: 30080
  selector:
    app: web-server
