Deploy/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: ClusterIP
  externalIPs:
  - 10.41.0.127
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 8080
    targetPort: 80
  selector:
    app: web-server
