Deploy/webapp-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: web-server-ingress
spec:
  rules:
    - host: http://coolcorp-test.public.ilb.jp-east-3.idcfcloud.net/
      http:
        paths:
        - path: /path1/*
          backend:
            serviceName: sample-ngress-svc-1
            servicePort: 8888
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
